ACM_General/home/static/home/scss/officers.scss
.nav-officers a span {
  color: #4d4d4d !important;
}

.nav-officers:hover a span {
  color: #4d4d4d !important;
}

.nav-officers:after {
  transform: scaleX(.8);
}



.cards a span{
  list-style: none;
  padding: 0 0 20px 0;
  margin: 0 auto;
  max-width: 800px;
}


.cards__card {
  list-style: none;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin: 1rem auto auto auto;
}

.acm-btn{
  width: 100px;
  margin-bottom: 10px;
  margin-left: auto;
  margin-right: auto;
}

.card__image {
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  -webkit-filter: contrast(70%);
  filter: contrast(70%);
  display: block;
  width: 180px;
  height: 180px;
  margin-left: auto;
  border-radius: 50%;
}

.card__content {
  height: 100%;
  padding: 1rem;
  display: flex;
  flex-direction: row;
  margin-right: auto;
}

.card__name {
  display: block;
  margin: auto;
}
.card__titles {
  margin: 0;
  font-size: .96rem;
  color: rgba(0,0,0,.8);
}
.card__text {
  margin: 0px 10px 10px 10px;
  width: 180px;
  font-size: .86rem;
  color: rgba(0,0,0,.77);
}
.card__links {
  width: 100px;
}
.card_heading {
  height: 100%;
  width: 180px;
  display: flex;
  flex-direction: column;

}

@media (max-width: 750px) {
  .card__content {
    -webkit-flex-direction: column !important;
    -ms-flex-direction: column !important;
    flex-direction: column !important;
    margin-top: 0;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
  }

}

@media (max-width: 425px) {

  .cards__card {
    -webkit-flex-direction: column !important;
    -ms-flex-direction: column !important;
    flex-direction: column !important;
    margin-top: 0;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
    justify-content: center;
  }

  .card__content {
    -webkit-flex-direction: column !important;
    -ms-flex-direction: column !important;
    flex-direction: column !important;
    margin-top: 0;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
    margin:auto;
  }
  .card__image {
    margin: auto;
  }

}

